<resources>

    <string name="app_name">VPEx Connection Manager</string>
    <string name="app_name_short">VPEx</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">VPEx Connection Manager</string>
    <string name="connect_button">Connect</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="sounds_string">Enable Sounds?</string>
    <string name="sounds_summary_string">Plays a sound when VPEx connections are established and terminated.</string>
    <string name="titlePrefs">Preferences</string>
    <string name="titleAbout">About</string>
    <string name="text_choose_prompt">Choose Connection:</string>
    <string name="text_status_prompt">Connection Status:</string>
    <string name="text_status_up">UP</string>
    <string name="text_status_down">DOWN</string>
    <string name="manageConnections">Manage VPEx Connections</string>
    <string name="title_connection_detail">Connection Detail</string>
    <string name="title_connection_list">Connections</string>
    <string name="refreshConnectionList">Refresh Connection List</string>
    <string name="deleteConnectionButton">Delete</string>
    <string name="associateNFCButton">Associate with NFC Tag</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_nfcwrite">Write NFC Tag</string>
    <string name="cancel">Cancel</string>
    <string name="datePrompt">Last used:</string>
    <string name="passwordPrompt">Password:</string>
    <string name="write_protect">Write-protect tag</string>
</resources>